# wechat-robot-mcp-server-python

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  main.py
src/config/: __init__.py  config.py
src/middleware/: __init__.py  tenant.py
src/model/: __init__.py  base.py  chatroom_settings.py  contact.py  global_settings.py  message.py
src/protobuf/: message.py
src/repository/: __init__.py  chatroom_settings.py  contact.py  global_settings.py  message.py
src/robot_context/: __init__.py  context.py
src/tools/: __init__.py  chat_room_summary.py  mcp_chat_room_summary.py  registry.py
src/utils/: utils.py
src/webhook/: __init__.py  wechat_messages.py
